# rzpdf

./: Cargo.toml  README.md
pdf/: Cargo.toml
pdf/examples/: document.rs
pdf/src/: error.rs  lib.rs  pdf_context.rs  writer.rs
pdf/src/color/: cal_gray.rs  cal_rgb.rs  colorspace.rs  device_cmyk.rs  device_gray.rs  device_rgb.rs  icc_based.rs  icc_profile.rs  indexed.rs  lab.rs  mod.rs  pdf_color.rs  separation.rs  value.rs
pdf/src/device/: mod.rs  trace.rs
pdf/src/document/: catalog.rs  cross_ref_table.rs  mod.rs  page_tree.rs  store.rs
pdf/src/filter/: ascii_85.rs  ascii_hex.rs  crypt.rs  dct.rs  flate.rs  jbig2.rs  jpx.rs  lzw.rs  mod.rs  pnm.rs  predictor.rs  run_length.rs
pdf/src/font/: afm.rs  cid_font.rs  descriptor.rs  encoding.rs  font_program.rs  mod.rs  pdf_font.rs  simple_font.rs  type0.rs  type1_program.rs
pdf/src/function/: exponential.rs  mod.rs  postscript.rs  sampled.rs  stitching.rs
pdf/src/geom/: matrix.rs  mod.rs  point.rs  rectangle.rs
pdf/src/io/: mod.rs  stream_reader.rs
pdf/src/objects/: mod.rs  object_id.rs  object_streams.rs  pdf_array.rs  pdf_bool.rs  pdf_dict.rs  pdf_indirect.rs  pdf_name.rs  pdf_number.rs  pdf_reference.rs  pdf_stream.rs  pdf_string.rs
pdf/src/page/: all_state.rs  clip_path.rs  color_state.rs  content_builder.rs  content_interpreter.rs  content_parser.rs  content_syntax.rs  display_list.rs  general_state.rs  graph_state.rs  graphic_state.rs  image_object.rs  mod.rs  opcode.rs  operator.rs  page_object.rs  path_object.rs  pdf_image.rs  text_object.rs  text_state.rs
pdf/src/parser/: character.rs  crypto.rs  (+5 more)
(+16 files in other folders)
